Handle UnsupportedEncodingExceptoin in StringTokenConverter